--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,11 @@ name = "bm"
 path = "main.rs"
 
 [dependencies]
-wasmi = "0.8.0"
+wasmi = "0.11.0"
 wasmtime = "0.25.0"
 wasm3 = { version = "0.1.3", features=["build-bindgen"]}
+wasmi_2 = { package = "wasmi", git = "https://github.com/paritytech/wasmi", features = ["std", "virtual_memory"] }
+
+[profile.release]
+lto = "fat"
+codegen-units = 1
